public/src/lib/rpc_to_json/src/rpc_to_json.js
/*
  * Generated by PEG.js 0.9.0.
  *
  * http://pegjs.org/
  */
(function() {
  function rpcToJson() {
    "use strict";

    /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

    function peg$subclass(child, parent) {
      function ctor() { this.constructor = child; }
      ctor.prototype = parent.prototype;
      child.prototype = new ctor();
    }

    function peg$SyntaxError(message, expected, found, location) {
      this.message  = message;
      this.expected = expected;
      this.found    = found;
      this.location = location;
      this.name     = "SyntaxError";

      if (typeof Error.captureStackTrace === "function") {
        Error.captureStackTrace(this, peg$SyntaxError);
      }
    }

    peg$subclass(peg$SyntaxError, Error);

    function peg$parse(input) {
      var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { Start: peg$parseStart },
        peg$startRuleFunction  = peg$parseStart,

        peg$c0 = function(fileComment, pkg, imports, description, interfaceName, methods) {
          return {
            package: pkg,
            interfaceName: interfaceName,
            imports: imports,
            description: getComment(description),
            methods: methods
          }
        },
        peg$c1 = "package",
        peg$c2 = { type: "literal", value: "package", description: "\"package\"" },
        peg$c3 = ";",
        peg$c4 = { type: "literal", value: ";", description: "\";\"" },
        peg$c5 = function(w) {
          return w.join('');
        },
        peg$c6 = "import",
        peg$c7 = { type: "literal", value: "import", description: "\"import\"" },
        peg$c8 = "public interface",
        peg$c9 = { type: "literal", value: "public interface", description: "\"public interface\"" },
        peg$c10 = "{",
        peg$c11 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c12 = function(w) {
          return w;
        },
        peg$c13 = "(",
        peg$c14 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c15 = ");",
        peg$c16 = { type: "literal", value: ");", description: "\");\"" },
        peg$c17 = function(methodComment, response, method, params) {
          setParamsDescriptionFromComment(params, methodComment);
          return {
            description: getComment(methodComment),
            output: response,
            method: method,
            inputs: params
          }
        },
        peg$c18 = "<Map<",
        peg$c19 = { type: "literal", value: "<Map<", description: "\"<Map<\"" },
        peg$c20 = ">>",
        peg$c21 = { type: "literal", value: ">>", description: "\">>\"" },
        peg$c22 = function(importType, mapType) {
          return {
            type: 'Object',
            importType: importType
          };
        },
        peg$c23 = "Map<",
        peg$c24 = { type: "literal", value: "Map<", description: "\"Map<\"" },
        peg$c25 = ">",
        peg$c26 = { type: "literal", value: ">", description: "\">\"" },
        peg$c27 = function(mapType) {
          return {
            type: 'Object'
          };
        },
        peg$c28 = "<List<",
        peg$c29 = { type: "literal", value: "<List<", description: "\"<List<\"" },
        peg$c30 = function(importType, type) {
          return {
            isArray: true,
            type: type,
            importType: importType
          };
        },
        peg$c31 = "<",
        peg$c32 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c33 = ">>>",
        peg$c34 = { type: "literal", value: ">>>", description: "\">>>\"" },
        peg$c35 = function(importType, type, listType) {
          return {
            importTypeVar: type,
            importType: importType
          };
        },
        peg$c36 = "List<",
        peg$c37 = { type: "literal", value: "List<", description: "\"List<\"" },
        peg$c38 = function(type) {
          return {
            isArray: true,
            type: type
          };
        },
        peg$c39 = function(importType, type) {
          return {
            type: type,
            importType: importType
          };
        },
        peg$c40 = function(type) {
          return {
            type: type
          };
        },
        peg$c41 = ",",
        peg$c42 = { type: "literal", value: ",", description: "\",\"" },
        peg$c43 = function(paramType, paramName) {
          return Object.assign(paramType, {
            name: paramName
          });
        },
        peg$c44 = function(type) {
          return {
            type: type,
            isArray: true
          };
        },
        peg$c45 = function(type) {
          return {
            type: type
          }
        },
        peg$c46 = "//",
        peg$c47 = { type: "literal", value: "//", description: "\"//\"" },
        peg$c48 = function(c) {
          return c.join('');
        },
        peg$c49 = function(c) {
          return c;
        },
        peg$c50 = /^[\/]/,
        peg$c51 = { type: "class", value: "[/]", description: "[/]" },
        peg$c52 = /^[*]/,
        peg$c53 = { type: "class", value: "[*]", description: "[*]" },
        peg$c54 = "*/",
        peg$c55 = { type: "literal", value: "*/", description: "\"*/\"" },
        peg$c56 = { type: "any", description: "any character" },
        peg$c57 = function(c) {
          var comments = c.map(function(item){
            return item[1]
          }).join('').split('\n');
          var result = [];
          comments.forEach(function(comment){
            var trimResult = comment.trim().replace(/^\*+|\*+$/g, '').trim();
            if (trimResult) {
              result.push(trimResult);
            }
          });
          return result.join('\n');
        },
        peg$c58 = function(l) {
          return l.join('');
        },
        peg$c59 = /^[a-zA-Z0-9, ]/,
        peg$c60 = { type: "class", value: "[a-zA-Z0-9, ]", description: "[a-zA-Z0-9, ]" },
        peg$c61 = function(c) {
          return c.join('');
        },
        peg$c62 = /^[a-zA-Z0-9]/,
        peg$c63 = { type: "class", value: "[a-zA-Z0-9]", description: "[a-zA-Z0-9]" },
        peg$c64 = { type: "other", description: "Whitespace" },
        peg$c65 = /^[ \t]/,
        peg$c66 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c67 = { type: "other", description: "Zero or more whitespaces" },
        peg$c68 = { type: "other", description: "One or more whitespaces" },
        peg$c69 = /^[\r\n]/,
        peg$c70 = { type: "class", value: "[\\r\\n]", description: "[\\r\\n]" },
        peg$c71 = /^[^;{]/,
        peg$c72 = { type: "class", value: "[^;{]", description: "[^;{]" },
        peg$c73 = /^[^\r\n]/,
        peg$c74 = { type: "class", value: "[^\\r\\n]", description: "[^\\r\\n]" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

      if ("startRule" in options) {
        if (!(options.startRule in peg$startRuleFunctions)) {
          throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
        }

        peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
      }

      function text() {
        return input.substring(peg$savedPos, peg$currPos);
      }

      function location() {
        return peg$computeLocation(peg$savedPos, peg$currPos);
      }

      function expected(description) {
        throw peg$buildException(
          null,
          [{ type: "other", description: description }],
          input.substring(peg$savedPos, peg$currPos),
          peg$computeLocation(peg$savedPos, peg$currPos)
        );
      }

      function error(message) {
        throw peg$buildException(
          message,
          null,
          input.substring(peg$savedPos, peg$currPos),
          peg$computeLocation(peg$savedPos, peg$currPos)
        );
      }

      function peg$computePosDetails(pos) {
        var details = peg$posDetailsCache[pos],
          p, ch;

        if (details) {
          return details;
        } else {
          p = pos - 1;
          while (!peg$posDetailsCache[p]) {
            p--;
          }

          details = peg$posDetailsCache[p];
          details = {
            line:   details.line,
            column: details.column,
            seenCR: details.seenCR
          };

          while (p < pos) {
            ch = input.charAt(p);
            if (ch === "\n") {
              if (!details.seenCR) { details.line++; }
              details.column = 1;
              details.seenCR = false;
            } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
              details.line++;
              details.column = 1;
              details.seenCR = true;
            } else {
              details.column++;
              details.seenCR = false;
            }

            p++;
          }

          peg$posDetailsCache[pos] = details;
          return details;
        }
      }

      function peg$computeLocation(startPos, endPos) {
        var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

        return {
          start: {
            offset: startPos,
            line:   startPosDetails.line,
            column: startPosDetails.column
          },
          end: {
            offset: endPos,
            line:   endPosDetails.line,
            column: endPosDetails.column
          }
        };
      }

      function peg$fail(expected) {
        if (peg$currPos < peg$maxFailPos) { return; }

        if (peg$currPos > peg$maxFailPos) {
          peg$maxFailPos = peg$currPos;
          peg$maxFailExpected = [];
        }

        peg$maxFailExpected.push(expected);
      }

      function peg$buildException(message, expected, found, location) {
        function cleanupExpected(expected) {
          var i = 1;

          expected.sort(function(a, b) {
            if (a.description < b.description) {
              return -1;
            } else if (a.description > b.description) {
              return 1;
            } else {
              return 0;
            }
          });

          while (i < expected.length) {
            if (expected[i - 1] === expected[i]) {
              expected.splice(i, 1);
            } else {
              i++;
            }
          }
        }

        function buildMessage(expected, found) {
          function stringEscape(s) {
            function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

            return s
              .replace(/\\/g,   '\\\\')
              .replace(/"/g,    '\\"')
              .replace(/\x08/g, '\\b')
              .replace(/\t/g,   '\\t')
              .replace(/\n/g,   '\\n')
              .replace(/\f/g,   '\\f')
              .replace(/\r/g,   '\\r')
              .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
              .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
              .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
              .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
          }

          var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

          for (i = 0; i < expected.length; i++) {
            expectedDescs[i] = expected[i].description;
          }

          expectedDesc = expected.length > 1
            ? expectedDescs.slice(0, -1).join(", ")
            + " or "
            + expectedDescs[expected.length - 1]
            : expectedDescs[0];

          foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

          return "Expected " + expectedDesc + " but " + foundDesc + " found.";
        }

        if (expected !== null) {
          cleanupExpected(expected);
        }

        return new peg$SyntaxError(
          message !== null ? message : buildMessage(expected, found),
          expected,
          found,
          location
        );
      }

      function peg$parseStart() {
        var s0, s1, s2, s3, s4, s5, s6, s7;

        s0 = peg$currPos;
        s1 = [];
        s2 = peg$parseComment();
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseComment();
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parsePackage();
          if (s2 !== peg$FAILED) {
            s3 = [];
            s4 = peg$parseImports();
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parseImports();
            }
            if (s3 !== peg$FAILED) {
              s4 = [];
              s5 = peg$parseComment();
              while (s5 !== peg$FAILED) {
                s4.push(s5);
                s5 = peg$parseComment();
              }
              if (s4 !== peg$FAILED) {
                s5 = peg$parseInterfaceName();
                if (s5 !== peg$FAILED) {
                  s6 = [];
                  s7 = peg$parseMethod();
                  while (s7 !== peg$FAILED) {
                    s6.push(s7);
                    s7 = peg$parseMethod();
                  }
                  if (s6 !== peg$FAILED) {
                    s7 = peg$parseAny();
                    if (s7 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c0(s1, s2, s3, s4, s5, s6);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }

        return s0;
      }

      function peg$parsePackage() {
        var s0, s1, s2, s3, s4, s5, s6;

        s0 = peg$currPos;
        if (input.substr(peg$currPos, 7) === peg$c1) {
          s1 = peg$c1;
          peg$currPos += 7;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c2); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseAnyWithoutTerminator();
            if (s3 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 59) {
                s4 = peg$c3;
                peg$currPos++;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c4); }
              }
              if (s4 !== peg$FAILED) {
                s5 = [];
                s6 = peg$parseLB();
                while (s6 !== peg$FAILED) {
                  s5.push(s6);
                  s6 = peg$parseLB();
                }
                if (s5 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c5(s3);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }

        return s0;
      }

      function peg$parseImports() {
        var s0, s1, s2, s3, s4, s5, s6;

        s0 = peg$currPos;
        if (input.substr(peg$currPos, 6) === peg$c6) {
          s1 = peg$c6;
          peg$currPos += 6;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c7); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseAnyWithoutTerminator();
            if (s3 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 59) {
                s4 = peg$c3;
                peg$currPos++;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c4); }
              }
              if (s4 !== peg$FAILED) {
                s5 = [];
                s6 = peg$parseLB();
                while (s6 !== peg$FAILED) {
                  s5.push(s6);
                  s6 = peg$parseLB();
                }
                if (s5 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c5(s3);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }

        return s0;
      }

      function peg$parseInterfaceName() {
        var s0, s1, s2, s3, s4, s5, s6, s7;

        s0 = peg$currPos;
        if (input.substr(peg$currPos, 16) === peg$c8) {
          s1 = peg$c8;
          peg$currPos += 16;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c9); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse__();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseWord();
            if (s3 !== peg$FAILED) {
              s4 = peg$parse__();
              if (s4 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 123) {
                  s5 = peg$c10;
                  peg$currPos++;
                } else {
                  s5 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c11); }
                }
                if (s5 !== peg$FAILED) {
                  s6 = [];
                  s7 = peg$parseLB();
                  while (s7 !== peg$FAILED) {
                    s6.push(s7);
                    s7 = peg$parseLB();
                  }
                  if (s6 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c12(s3);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }

        return s0;
      }

      function peg$parseMethod() {
        var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

        s0 = peg$currPos;
        s1 = [];
        s2 = peg$parseComment();
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseComment();
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseResponse();
            if (s3 !== peg$FAILED) {
              s4 = peg$parse_();
              if (s4 !== peg$FAILED) {
                s5 = peg$parseWord();
                if (s5 !== peg$FAILED) {
                  s6 = peg$parse_();
                  if (s6 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 40) {
                      s7 = peg$c13;
                      peg$currPos++;
                    } else {
                      s7 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c14); }
                    }
                    if (s7 !== peg$FAILED) {
                      s8 = [];
                      s9 = peg$parseParameter();
                      while (s9 !== peg$FAILED) {
                        s8.push(s9);
                        s9 = peg$parseParameter();
                      }
                      if (s8 !== peg$FAILED) {
                        if (input.substr(peg$currPos, 2) === peg$c15) {
                          s9 = peg$c15;
                          peg$currPos += 2;
                        } else {
                          s9 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c16); }
                        }
                        if (s9 !== peg$FAILED) {
                          s10 = [];
                          s11 = peg$parseLB();
                          while (s11 !== peg$FAILED) {
                            s10.push(s11);
                            s11 = peg$parseLB();
                          }
                          if (s10 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c17(s1, s3, s5, s8);
                            s0 = s1;
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }

        return s0;
      }

      function peg$parseResponse() {
        var s0, s1, s2, s3, s4, s5, s6;

        s0 = peg$currPos;
        s1 = peg$parseWord();
        if (s1 !== peg$FAILED) {
          if (input.substr(peg$currPos, 5) === peg$c18) {
            s2 = peg$c18;
            peg$currPos += 5;
          } else {
            s2 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c19); }
          }
          if (s2 !== peg$FAILED) {
            s3 = peg$parseWordOrCommaOrSpace();
            if (s3 !== peg$FAILED) {
              if (input.substr(peg$currPos, 2) === peg$c20) {
                s4 = peg$c20;
                peg$currPos += 2;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c21); }
              }
              if (s4 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c22(s1, s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.substr(peg$currPos, 4) === peg$c23) {
            s1 = peg$c23;
            peg$currPos += 4;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c24); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parseWordOrCommaOrSpace();
            if (s2 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 62) {
                s3 = peg$c25;
                peg$currPos++;
              } else {
                s3 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c26); }
              }
              if (s3 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c27(s2);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseWord();
            if (s1 !== peg$FAILED) {
              if (input.substr(peg$currPos, 6) === peg$c28) {
                s2 = peg$c28;
                peg$currPos += 6;
              } else {
                s2 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c29); }
              }
              if (s2 !== peg$FAILED) {
                s3 = peg$parseWord();
                if (s3 !== peg$FAILED) {
                  if (input.substr(peg$currPos, 2) === peg$c20) {
                    s4 = peg$c20;
                    peg$currPos += 2;
                  } else {
                    s4 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c21); }
                  }
                  if (s4 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c30(s1, s3);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parseWord();
              if (s1 !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 60) {
                  s2 = peg$c31;
                  peg$currPos++;
                } else {
                  s2 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c32); }
                }
                if (s2 !== peg$FAILED) {
                  s3 = peg$parseWord();
                  if (s3 !== peg$FAILED) {
                    if (input.substr(peg$currPos, 6) === peg$c28) {
                      s4 = peg$c28;
                      peg$currPos += 6;
                    } else {
                      s4 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c29); }
                    }
                    if (s4 !== peg$FAILED) {
                      s5 = peg$parseWord();
                      if (s5 !== peg$FAILED) {
                        if (input.substr(peg$currPos, 3) === peg$c33) {
                          s6 = peg$c33;
                          peg$currPos += 3;
                        } else {
                          s6 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c34); }
                        }
                        if (s6 !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$c35(s1, s3, s5);
                          s0 = s1;
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                if (input.substr(peg$currPos, 5) === peg$c36) {
                  s1 = peg$c36;
                  peg$currPos += 5;
                } else {
                  s1 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c37); }
                }
                if (s1 !== peg$FAILED) {
                  s2 = peg$parseWord();
                  if (s2 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 62) {
                      s3 = peg$c25;
                      peg$currPos++;
                    } else {
                      s3 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c26); }
                    }
                    if (s3 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c38(s2);
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  s1 = peg$parseWord();
                  if (s1 !== peg$FAILED) {
                    if (input.charCodeAt(peg$currPos) === 60) {
                      s2 = peg$c31;
                      peg$currPos++;
                    } else {
                      s2 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c32); }
                    }
                    if (s2 !== peg$FAILED) {
                      s3 = peg$parseWord();
                      if (s3 !== peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 62) {
                          s4 = peg$c25;
                          peg$currPos++;
                        } else {
                          s4 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c26); }
                        }
                        if (s4 !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$c39(s1, s3);
                          s0 = s1;
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                  if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    s1 = peg$parseWord();
                    if (s1 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c40(s1);
                    }
                    s0 = s1;
                  }
                }
              }
            }
          }
        }

        return s0;
      }

      function peg$parseParameter() {
        var s0, s1, s2, s3, s4, s5;
